--- a/browser/themes/shared/toolbarbuttons.css
+++ b/browser/themes/shared/toolbarbuttons.css
@@ -163,24 +163,6 @@ toolbar[brighttext] .toolbaritem-combined-buttons > separator {
   opacity: .3;
 }
 
-/* Toolbar button animations */
-
-.toolbarbutton-animatable-box {
-  display: block;
-  position: absolute;
-  overflow: hidden;
-  z-index: 2;
-  pointer-events: none;
-
-  > .toolbarbutton-animatable-image {
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-    list-style-image: none;
-  }
-}
-
-/* Navigation toolbar overflow button with animation */
-
 #nav-bar-overflow-button {
   list-style-image: url("chrome://global/skin/icons/chevron.svg");
 
@@ -236,134 +218,6 @@ toolbar[brighttext] .toolbaritem-combined-buttons > separator {
   from {
     transform: translateX(-832px);
   }
-}
-
-/* Combined Stop and Reload button with animation */
-
-#reload-button:not([displaystop]) + #stop-button,
-#reload-button[displaystop] {
-  display: none;
-}
-
-/* The reload-button is only disabled temporarily when it becomes visible
-   to prevent users from accidentally clicking it. We don't however need
-   to show this disabled state, as the flicker that it generates is short
-   enough to be visible but not long enough to explain anything to users. */
-#reload-button[disabled]:not(:-moz-window-inactive) {
-  opacity: 1 !important;
-}
-
-@keyframes stop-to-reload {
-  /* pause on the first frame (step 0) for 6 frames of time */
-  from {
-    /* 0 */
-    transform: translateX(0);
-  }
-  /* resume at 7/35 and animate across the next 14 frames */
-  17.14% {
-    animation-timing-function: steps(14);
-    transform: translateX(calc(0  * -20px));
-  }
-  /* pause on the last frame for the remainder of the duration */
-  54.29% {
-    transform: translateX(calc(14 * -20px));
-  }
-  to {
-    /* end state for animation: */
-    transform: translateX(calc(var(--anim-frames) * -20px));
-  }
-}
-
-@keyframes reload-to-stop {
-  /* pause on the first frame (step 0) for 6 frames of time */
-  from {
-    /* 0 */
-    transform: translateX(0);
-    animation-timing-function: steps(12);
-  }
-  /* pause at 13/15 for 3 frames */
-  86.67% {
-    transform: translateX(calc(var(--anim-frames) * -20px));
-  }
-  to {
-    /* end state for animation: */
-    transform: translateX(calc(var(--anim-frames) * -20px));
-  }
-}
-
-:is(#reload-button, #stop-button) > .toolbarbutton-animatable-box {
-  top: calc(50% - 10px); /* Vertically center the 20px tall animatable image */
-  width: 20px; /* Width of each frame within the SVG sprite */
-  height: 20px; /* Height of each frame within the SVG sprite */
-
-  /* The animations for the reload-button and stop-button are disabled
-     outside of the nav-bar due to bug 1382894. */
-  :not(#nav-bar-customization-target) > #stop-reload-button > & {
-    display: none;
-  }
-}
-
-#stop-reload-button[animate] {
-  > #reload-button > .toolbarbutton-icon,
-  > #reload-button[displaystop] + #stop-button > .toolbarbutton-icon {
-    fill: transparent;
-  }
-
-  > #reload-button,
-  > #stop-button {
-    position: relative;
-  }
-
-  > #reload-button > .toolbarbutton-animatable-box > .toolbarbutton-animatable-image {
-    background-image: url("chrome://browser/skin/stop-to-reload.svg");
-    /* transition from stop icon to reload icon
-       pause at frame 0 for 6 ticks,
-       pause at frame 15 for 16 ticks
-       total 35 steps */
-    --anim-frames: 14;
-    --anim-steps: calc(var(--anim-frames) + 21); /* Add steps for doing the pause at the start and end */
-    width: calc(20px * (var(--anim-frames) + 1));
-    height: 20px;
-
-    /* initial state for animation */
-    transform: translateX(0);
-  }
-
-  > #reload-button:not([displaystop]) > .toolbarbutton-animatable-box > .toolbarbutton-animatable-image {
-    animation-name: stop-to-reload;
-  }
-
-  > #reload-button[displaystop] + #stop-button > .toolbarbutton-animatable-box > .toolbarbutton-animatable-image {
-    background-image: url("chrome://browser/skin/reload-to-stop.svg");
-    /* transition from reload icon to stop icon
-       pause at end for 3 frames of time
-       pause at ...
-       total 15 steps */
-    --anim-frames: 12;
-    --anim-steps: calc(var(--anim-frames) + 3); /* Add steps for doing the pause at the start and end */
-    width: calc(20px * (var(--anim-frames) + 1));
-    height: 20px;
-
-    /* initial state for animation */
-    transform: translateX(0);
-
-    animation-name: reload-to-stop;
-    animation-duration: calc(var(--anim-steps) * 16.667ms);
-  }
-}
-
-#reload-button:not([displaystop]) > .toolbarbutton-animatable-box > .toolbarbutton-animatable-image {
-  animation-duration: calc(var(--anim-steps) * 16.667ms);
-}
-
-#reload-button > .toolbarbutton-animatable-box > .toolbarbutton-animatable-image {
-  transform: translateX(-700px);
-}
-
-#reload-button[displaystop] + #stop-button > .toolbarbutton-animatable-box > .toolbarbutton-animatable-image {
-  animation-timing-function: steps(15);
-  animation-duration: 0.25s;
-  transform: translateX(-300px);
 }
 
 /* Bookmark buttons */
